# palindrome

./: CMakeLists.txt  main.c  rebuild
palindrome/: CMakeLists.txt  palindrome.c  palindrome.h
palindrome/test/: test.c
